# async-odoors

./: Cargo.toml  README.md
examples/: odoo.rs
src/: api.rs  lib.rs  odoo.rs
