[package]
name = "async-odoors"
authors = ["Valerian DORCY <valerian.dorcy@gmail.com>", "serxoz <serxoz@protonmail.ch>"]
description = "Odoo async library"
repository = "https://github.com/serxoz/async-odoors"
license = "MIT"
version = "1.0.0"
edition = "2021"
exclude = [
    "http/*",
    ".github",
]

[[bin]]
path = "examples/odoo.rs"
name = "odoors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = { version = "1.0.73" }
serde_with = "1.12.1"
rand = "0.8.4"
