[package]
name = "async-odoors"
authors = ["Valerian DORCY <valerian.dorcy@gmail.com>", "serxoz <serxoz@protonmail.ch>"]
description = "Odoo JSON-RPC client async library"
homepage = "https://github.com/serxoz/async-odoors"
documentation = "https://github.com/serxoz/async-odoors"
repository = "https://github.com/serxoz/async-odoors"
keywords = ["odoo", "json-rpc", "async", "tokio"]
readme = "README.md"
license = "MIT"
version = "1.0.0"
edition = "2021"
exclude = [
    "http/*",
    ".github",
]

[[bin]]
path = "examples/odoo.rs"
name = "odoors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85" }
# serde_with = "1.12.1"
serde_with = "2.0.1"
rand = "0.8.5"
